Crash when specifying very large code cache size

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • hs25
    • Affects Version/s: hs25
    • Component/s: hotspot
    • None
    • b41
    • x86

        The -XX:ReservedCodeCacheSize option controls the maximum size of the code cache. There are however built-in limitations to how big the code cache be. For example, on x86 I can successfully run this:

        java -XX:ReservedCodeCacheSize=2048m -jar specjbb2013.jar

        But this crashes the VM:

        java -XX:ReservedCodeCacheSize=2049m -jar specjbb2013.jar

        so the limit appears to be 2048MB in this case.


        We should verify the specified size handle any "incorrect" values gracefully.

        ILW = HLL -> P4

              Assignee:
              Albert Noll (Inactive)
              Reporter:
              Mikael Vidstedt
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: