8015635: Crash when specifying very large code cache size

Limit the size of the code cache to at most 2G when arguments are checked; added regression test

Reviewed-by: kvn, twisti